# supply_chain

./: PLAN.md  README.md  docker-compose.yml  docker-manage.sh
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.celery  Dockerfile.celery-beat  Makefile  README.md  check_shipments.py  create_sample_batches.py  create_sample_events.py  create_sample_packs.py  create_sample_products.py  create_sample_shipments.py  pyproject.toml  ruff.toml  test_automated_events.py  test_blockchain_manual.py  test_damage_debug.py  test_damage_logic.py  test_role_restore.py
backend/src/: reset_app.py
backend/src/api/: __init__.py  celery.py  settings.py  urls.py
backend/src/supplychain/: admin.py  apps.py  caching.py  exceptions.py  logging_config.py  middleware.py  pagination.py  permissions.py  signals.py  storage.py  tasks.py  validators.py  views.py
backend/src/supplychain/migrations/: 0001_initial.py  0002_roleassignment_created_at_roleassignment_deleted_at_and_more.py  0003_product.py  0004_batch.py  0005_pack.py  0006_shipment_shipmentpack_shipment_packs_and_more.py  0007_event.py  0008_event_blockchain_block_number_and_more.py  0009_batch_available_quantity.py  0010_alter_batch_lot_number_alter_pack_serial_number_and_more.py  0011_document.py  0012_notification_system.py  0013_alter_event_entity_type_alter_event_event_type.py  0014_add_document_anchored_event_type.py  0015_expand_event_type_choices.py
backend/src/supplychain/models/: __init__.py  base.py  batch.py  document.py  event.py  notification.py  pack.py  product.py  shipment.py  user.py
backend/src/supplychain/serializers/: __init__.py  batch.py  document.py  event.py  notification.py  pack.py  product.py  shipment.py  user.py
backend/src/supplychain/services/: blockchain.py  events.py  pdf_generator.py
backend/src/supplychain/tests/: __init__.py  test_blockchain.py  test_concurrent_operations.py  test_notifications.py  test_user_models.py  test_user_serializers.py  test_user_views.py  (+1 more)
(+121 files in other folders)
