[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "teofils1", email = "teodor.marinescu03@stud.fils.upb.ro" }
]
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.5",
    "django-cors-headers>=4.7.0",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt>=5.5.1",
    "psycopg[binary]>=3.2.9",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.1.1",
    "web3>=7.13.0",
]

 

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "ruff>=0.12.8",
]

 
[tool.hatch.build.targets.wheel]
packages = ["src/api", "src/supplychain"]

[tool.hatch.build.targets.sdist]
include = ["src/api", "src/supplychain", "README.md"]

